Fixed: using correct version of .deb file.

--- a/install-checkmk-lnx.yml
+++ b/install-checkmk-lnx.yml
@@ -3,13 +3,13 @@
   tasks:
   - name: Copy Checkmk agent installer.
     copy:
-      src: check-mk-free-2.0.0p19_0.buster_amd64.deb
-      dest: /tmp/check-mk-free-2.0.0p19_0.buster_amd64.deb
+      src: check-mk-agent_2.0.0p22-1_all.deb
+      dest: /tmp/check-mk-agent_2.0.0p22-1_all.deb
       mode: 0644
 
   - name: Install Checkmk agent.
     apt:
       update_cache: true
       cache_valid_time: 3600
-      deb: /tmp/check-mk-free-2.0.0p19_0.buster_amd64.deb
+      deb: /tmp/check-mk-agent_2.0.0p22-1_all.deb
       state: present
